[tool.poetry]
name = "modern-chat"
version = "0.1.0"
description = ""
authors = ["John <john.loverich@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "modern_chat"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
chainlit = "^0.7.301"
ctransformers = "^0.2.27"
langchain = "^0.0.320"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
